--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
         </div>
       </div>
       <div class="projects__card card--reverse">
-        <img class="card__cover" src="assets/images/projects/Game.png" alt="Capa Detona Ralph">
+        <img class="card__cover" src="assets/images/projects/previsaoProjeto.png" alt="Capa Previsão">
         <div class="card__body">
-          <h3 class="card__title">detona ralph game</h3>
-          <p class="card__description">Um jogo do Detona Ralph, inspirado pelos jogos mais antigos.</p>
+          <h3 class="card__title">projeto de previsão de tempo</h3>
+          <p class="card__description">Um projeto pessoal de previsão de tempo, utilizando ReactJs, Axios, e a API OpenWeather.</p>
          
           <ul class="technologies__list">
             <li class="technologies__item">
@@ -173,6 +173,9 @@
             </li>
             <li class="technologies__item">
               <img class="technologies__logo" src="assets/images/technologies/CSS.svg" alt="Logo CSS">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/ReactJS.svg" alt="Logo React">
             </li>
           </ul>
           <div class="card__buttons">
