--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
           <div class="card__buttons">
             
             <button class="btn btn--primary">
-              <span><a href="https://yanswo.github.io/gamedetonaralph/">Prévia</a></span>
+              <span><a href="https://busca-previsao.vercel.app/">Prévia</a></span>
               <i class="bi bi-arrow-up-right"></i>
             </button>  
             <button class="btn">
-              <span><a href="https://github.com/yanswo/gamedetonaralph">Repositório</a></span>
+              <span><a href="https://github.com/yanswo/buscaPrevisao">Repositório</a></span>
             </button>  
           </div>
         </div>
@@ -346,8 +346,7 @@
 
   <footer>
     <p>
-      © 2024. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
-      <a href="https://www.dio.me/" target="_blank">Digital Innovation One</a> por 
+      © 2024. Portfólio desenvolvido por 
       <a href="https://github.com/yanswo" target="_blank">Yan Lucas</a>.
     </p>
   </footer>
