--- a/index.html
+++ b/index.html
@@ -190,6 +190,42 @@
           </div>
         </div>
       </div>
+      <div class="projects__container">
+        <div class="projects__card">
+          <img class="card__cover" src="assets/images/projects/dashboard.png" alt="Capa Pokedex">
+          <div class="card__body">
+            <h3 class="card__title">dashboard financeiro</h3>
+            <p class="card__description">Uma dashboard financeira com foco no usuario, com despesas e receitas, e um grafico que atualiza em tempo real após a entrada de valores.</p>
+            <ul class="card__list">
+              <li class="card__item">Feita dentro do React, com a biblioteca Chart.js;</li>
+              <li class="card__item">Atualização do gráfico em tempo real;</li>
+              <li class="card__item">Bem estruturado e simples de se utilizar.</li>
+            </ul>
+            <ul class="technologies__list">
+              <li class="technologies__item">
+                <img class="technologies__logo" src="assets/images/technologies/JavaScript.svg" alt="Logo JavaScript">
+              </li>
+              <li class="technologies__item">
+                <img class="technologies__logo" src="assets/images/technologies/HTML.svg" alt="Logo HTML">
+              </li>
+              <li class="technologies__item">
+                <img class="technologies__logo" src="assets/images/technologies/CSS.svg" alt="Logo CSS">
+              </li>
+              <li class="technologies__item">
+                <img class="technologies__logo" src="assets/images/technologies/ReactJS.svg" alt="Logo CSS">
+              </li>
+            </ul>
+            <div class="card__buttons">
+              <button class="btn btn--primary">
+                <span><a href="https://dashboard-financeiro-blue.vercel.app/">Prévia</a></span>
+                <i class="bi bi-arrow-up-right"></i>
+              </button>  
+              <button class="btn">
+                <span><a href="https://github.com/yanswo/dashboard-financeiro">Repositório</a></span>
+              </button>  
+            </div>
+          </div>
+        </div>
       <div class="projects__card card--reverse">
         <img class="card__cover" src="assets/images/projects/React.png" alt="Capa To-do list">
         <div class="card__body">
