--- a/index.html
+++ b/index.html
@@ -260,6 +260,44 @@
       </div>
       
         </div>
+
+        <div class="projects__card">
+        <img class="card__cover" src="assets/images/projects/currency.png" alt="Capa Conversor de moedas">
+        <div class="card__body">
+          <h3 class="card__title">Conversor de Moedas</h3>
+          <p class="card__description">Um site de conversão de moedas utilizando react e a API da Exchange Rate, possuindo historico de conversões do usuário e com enfase em ser simples.</p>
+          <ul class="card__list">
+            <li class="card__item">Criada utilizando React;</li>
+            <li class="card__item">Utiliza-se a API da Exchange Rate;</li>
+            <li class="card__item">A conversão é atualizada em tempo real.</li>
+          </ul>
+          <ul class="technologies__list">
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/JavaScript.svg" alt="Logo JavaScript">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/HTML.svg" alt="Logo HTML">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/CSS.svg" alt="Logo CSS">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/ReactJS.svg" alt="Logo React">
+            </li>
+          </ul>
+          <div class="card__buttons">
+            <button class="btn btn--primary">
+              <span><a href="https://current-currency.vercel.app/">Prévia</a></span>
+              <i class="bi bi-arrow-up-right"></i>
+            </button>  
+            <button class="btn">
+              <span><a href="https://github.com/yanswo/CurrentCurrency">Repositório</a></span>
+            </button>  
+          </div>
+        </div>
+      </div>
+
+
       </div>
       <a href="https://github.com/yanswo">
         <button class="btn btn--primary">
