--- a/index.html
+++ b/index.html
@@ -265,11 +265,11 @@
         <img class="card__cover" src="assets/images/projects/Conversor.png" alt="Capa Conversor de moedas">
         <div class="card__body">
           <h3 class="card__title">Conversor de Moedas</h3>
-          <p class="card__description">Um site de conversão de moedas utilizando react e a API da Exchange Rate, possuindo historico de conversões do usuário e com enfase em ser simples.</p>
+          <p class="card__description">Um site de conversão de moedas utilizando react e a API da Exchange Rate, possuindo historico de conversões do usuário juntamente com um grafico de taxas de câmbio, com enfase em ser simples.</p>
           <ul class="card__list">
             <li class="card__item">Criada utilizando React;</li>
             <li class="card__item">Utiliza-se a API da Exchange Rate;</li>
-            <li class="card__item">A conversão é atualizada em tempo real.</li>
+            <li class="card__item">A conversão é atualizada em tempo real juntamente com seu grafico.</li>
           </ul>
           <ul class="technologies__list">
             <li class="technologies__item">
