--- a/index.html
+++ b/index.html
@@ -296,6 +296,46 @@
           </div>
         </div>
       </div>
+        <div class="projects__card card--reverse">
+        <img class="card__cover" src="assets/images/projects/e-commerce.png" alt="Capa To-do list">
+        <div class="card__body">
+          <h3 class="card__title">Projeto de e-commerce</h3>
+          <p class="card__description">Este é um projeto de e-commerce desenvolvido em React aonde pode fazer cadastro e login de usuarios, favoritar itens, comprar produtos, salvar no historico entre outros.</p>
+            <ul class="card__list">
+            <li class="card__item">Criada utilizando React;</li>
+            <li class="card__item">Utiliza-se JSON Server para simular uma API REST</li>
+            <li class="card__item">Usuários podem, cadastrar, fazer login, salvar produtos em favoritos, comprar produtos e ver o histórico.</li>
+          </ul>
+
+          <ul class="technologies__list">
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/JavaScript.svg" alt="Logo JavaScript">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/HTML.svg" alt="Logo HTML">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/ReactJS.svg" alt="Logo ReactJS">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/React-router.svg" alt="Logo ReactJS">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/json-file-svgrepo-com.svg" alt="Logo ReactJS">
+            </li>
+          </ul>
+          <div class="card__buttons">
+            
+            <button class="btn btn--primary">
+              <span><a href="https://e-commerce-teal-pi.vercel.app/">Prévia</a></span>
+              <i class="bi bi-arrow-up-right"></i>
+            </button>  
+            <button class="btn">
+              <span><a href="https://github.com/yanswo/e-commerce">Repositório</a></span>
+            </button>  
+          </div>
+        </div>
+      </div>
 
 
       </div>
