--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yan Lucas | Portfolio</title>
-  <meta name="description" content="Portfólio da desenvolvedora front-end Elidiana Andrade para compartilhar projetos e habilidades desenvolvidas.">
+  <meta name="description" content="Portfolio de Yan Lucas, Desenvolvedor Web Front-end. Conheça meus projetos e habilidades em HTML, CSS, JavaScript e ReactJS.">
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -76,8 +76,8 @@
 
   <main id="home">
     <div class="main__content1">
-      <h1><b>Soluções Criativas &</b> Desenvolvimento Front-end</h1>
-      <p>Yan Lucas, Maceió-AL, Desenvolvedor Web Front-end.</p> 
+      <h1><b>Soluções Criativas &</b> Desenvolvimento Web</h1>
+      <p>Yan Lucas, Maceió-AL, Desenvolvedor Web</p> 
       <ul class="menu menu--social">
         <li>
           <a class="menu__link" href="https://github.com/yanswo" target="_blank">
@@ -337,6 +337,40 @@
         </div>
       </div>
 
+      <div class="projects__card">
+        <img class="card__cover" src="assets/images/projects/Unihostel.png" alt="Capa Conversor de moedas">
+        <div class="card__body">
+          <h3 class="card__title">Unihostel</h3>
+          <p class="card__description">Um sistema de hospedagem, focado em universitários, com chat entre locador e hospede e adicionais.</p>
+          <ul class="card__list">
+            <li class="card__item">Universitários fazem o cadastro, e podem procurar casas para alugar, escolher data, se comunicar com o locador, favoritar e fazer o pagamento juntamente com o comprovante em PDF.</li>
+            <li class="card__item">Locadores ao fazer o cadastro, podem cadastrar a casa, bloquear a casa por um tempo no calendário e dizer o motivo, editar casa, valor, localidade.</li>
+            <li class="card__item">Administração tem seu dashboard proprío com estatísticas de locadores e clientes, além de visualizar e editar todos os dados.</li>
+          </ul>
+          <ul class="technologies__list">
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/JavaScript.svg" alt="Logo JavaScript">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/CSS.svg" alt="Logo CSS">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="assets/images/technologies/ReactJS.svg" alt="Logo React">
+            </li>
+            <li class="technologies__item">
+              <img class="technologies__logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" alt="Logo Nodejs">
+            </li>
+          </ul>
+          <div class="card__buttons">
+            <button class="btn btn--primary">
+              <span><a href="#">Prévia</a></span>
+              <i class="bi bi-arrow-up-right"></i>
+            </button>  
+            <button class="btn">
+              <span><a href="https://github.com/projetosnassau/unihostel">Repositório</a></span>
+            </button>  
+          </div>
+        </div>
 
       </div>
       <a href="https://github.com/yanswo">
