--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           </ul>
           <div class="card__buttons">
             <button class="btn btn--primary">
-              <span><a href="#">Prévia</a></span>
+              <span><a href="https://unihosp.vercel.app/">Prévia</a></span>
               <i class="bi bi-arrow-up-right"></i>
             </button>  
             <button class="btn">
